//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris.c;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris.c";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/timestamp.proto";
import "javaclasses/exlibris/identifiers.proto";
import "javaclasses/exlibris/values.proto";

// The attempt to create the new book.
//
// In case of the successful command propagation, the book is added.
// not be applied to the existing book.
//
message AddBook {

    // The ID of the book to create.
    BookId book_id = 1;

    // The details for the new book.
    BookDetails book_details = 2;
}

// The attempt to update the book.
//
// In case of the successful command propagation, the book is updated.
// Cannot be applied to the missing book.
//
message UpdateBook {

    // The ID of the book to update.
    BookId book_id = 1;

    // The new details for the existed book.
    BookDetails book_details = 2;
}

// The attempt to remove the book.
//
// In case of the successful command propagation, the book is removed.
// Cannot be applied to the missing book.
//
message RemoveBook {

    // ID of the book to remove.
    BookId bok_id = 1;

    // The reason of removing book.
    //
    // Book could be remove with one of the next reason:
    // 1. Book was lost.
    // 2. Book was outdated.
    // 3. Custom reason that describes by librarian.
    oneof book_removal_reason {
        bool lost = 2;
        bool outdated = 3;
        string custom_reason = 4;
    }

    // The time when book was removed.
    google.protobuf.Timestamp when_removed = 5;
}

// Append the item to the book inventory.
// In case of the successful command propagation,
// appended book becomes available or ready to pickup for the user who borrowed it.
//
message AppendInventory {

    // The identifier of the inventory.
    InventoryId intentory_id = 1;

    // The identifier of the inventory item.
    InventoryItemId inventory_item_id = 2;

    // Optional field: exists when book has RFID mark.
    Rfid rfid = 3;
}

// The attempt to borrow the book.
//
// In case of the successful command propagation, the book is borrowed by user.
// If book was reserved, then reservation became loan.
//
// Cannot be applied to the book that is reserved by another user.
//
message BorrowBook {

    // The identifier of an inventory item.
    InventoryItemId intentory_item_id = 1;

    // The identifier of the user, who borrows the book.
    UserId user_id = 2;
}

// The attempt to reserve the book.
//
// In case of the successful command propagation, the book is reserved.
// Will be regected  if the book has already borrowed or reserved by current user.
//
message ReserveBook {

    // The identifier of an inventory.
    InventoryId intentory_id = 1;

    // The identifier of the user, who reserves the book.
    UserId user_id = 2;
}

// The attempt to cancel the reservation.
//
// In case of the successful command propagation, the reservation is canceled.
// Cannot be applied to the missing reservation.
//
message CancelReservation {

    // The identifier of an inventory.
    InventoryId intentory_id = 1;

    // The identifier of the user, who cancels the book reservation.
    UserId user_id = 2;
}

// The attempt to extend the loan period.
//
// In case of the successful command propagation, the loan period is extended.
// Will be rejected if the book has been reserved by another user.
//
message ExtendLoanPeriod {

    // The identifier of loan period.
    LoanId loan_id = 1;

    // New due date of loan.
    google.protobuf.Timestamp new_due_date = 2;
}

//  Marks the loan period as overdue if the user hasn't return the book in time.
//
message MarkLoanOverdue {

    // The identifier of loan period.
    LoanId loan_id = 1;
}

// Mark reservation as expired if the user hasn't taken the book in 2 days.
//
message MarkReservationExpired {

    // The identifier of an inventory.
    InventoryId intentory_id = 1;

    // The identifier of the user, whose book reservation expires.
    UserId user_id = 2;
}

// The attempt to return the book.
//
// In case of the successful command propagation, the book is returned.
// Cannot be applied to missing or non-borrowed books.
//
message ReturnBook {

    // The identifier of an inventory.
    InventoryId intentory_id = 1;

    // The identifier of an inventory item.
    InventoryItemId inventory_item_id = 2;

    // The identifier of the user, who returns the book.
    UserId user_id = 3;
}

// The attempt to report the lost book.
//
// In case of the successful command propagation, the book is reported as lost.
//
message ReportLostBook {

    // The identifier of an inventory item.
    InventoryItemId inventory_item_id = 1;

    // The identifier of the user, who has lost the book.
    UserId who_lost = 2;
}

// The attempt to write off the book.
//
// In case of the successful command propagation, the book is written off.
// Cannot be applied to the missing book.
//
message WriteBookOff {

    // The identifier of an inventory item.
    InventoryItemId inventory_item_id = 1;

    // Reasons to write book off.
    WriteOffReason write_book_off_reason = 2;
}
